--- a/Supervisorio/SupervisorioApp/SupervisorioDASC/SupervisorioDASC/SupervisorioDASC.csproj
+++ b/Supervisorio/SupervisorioApp/SupervisorioDASC/SupervisorioDASC/SupervisorioDASC.csproj
@@ -83,5 +83,8 @@
   <ItemGroup>
     <None Include="Resources\poliUpe.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logo-upe-site.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
